Fix some bugs of the code behavior:
- The user opens the form for the new tweet with no error message visible;
- If the user submits a tweet that fails validation, an appropriately styled error message slides into view;
- When the user submits a new tweet and the error message is visible, the error message slides out of view (and may slide back into view if validation errors remain).

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -3,6 +3,11 @@
   margin: 1rem 0;
 } */
 
+.error-message-1, .error-message-2 {
+  display: none;
+  background-repeat: no-repeat;
+}
+
 form {
   display: flex;
   flex-direction: column;
